{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 26,
  "lineage": "85c162f8-f502-a115-8247-846d39709226",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_nat_rule_collection",
      "name": "fe-rg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Dnat",
            "azure_firewall_name": "FW-01",
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Fe-rg/providers/Microsoft.Network/azureFirewalls/FW-01/natRuleCollections/nat01",
            "name": "nat01",
            "priority": 100,
            "resource_group_name": "Fe-rg",
            "rule": [
              {
                "description": "",
                "destination_addresses": [
                  "20.73.104.143"
                ],
                "destination_ports": [
                  "3389"
                ],
                "name": "jbox-rule",
                "protocols": [
                  "TCP"
                ],
                "source_addresses": [
                  "*"
                ],
                "translated_address": "10.0.1.4",
                "translated_port": "3389"
              },
              {
                "description": "",
                "destination_addresses": [
                  "20.73.104.143"
                ],
                "destination_ports": [
                  "80"
                ],
                "name": "web-rule",
                "protocols": [
                  "TCP"
                ],
                "source_addresses": [
                  "*"
                ],
                "translated_address": "10.0.2.4",
                "translated_port": "80"
              }
            ],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_firewall.fe-rg",
            "azurerm_network_interface.be-rg",
            "azurerm_network_interface.jbox-rg",
            "azurerm_public_ip.fe-rg",
            "azurerm_resource_group.be-rg",
            "azurerm_resource_group.fe-rg",
            "azurerm_resource_group.jbox-rg",
            "azurerm_subnet.be-rg",
            "azurerm_subnet.fe-rg-01",
            "azurerm_subnet.fe-rg-02",
            "azurerm_virtual_network.be-rg",
            "azurerm_virtual_network.fe-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "be-rg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Be-rg/providers/Microsoft.Network/networkInterfaces/Web-nic",
            "internal_domain_name_suffix": "siqfhyxjq01ufc5a5vsmpesxpa.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Be-rg/providers/Microsoft.Network/virtualNetworks/Web-vnet/subnets/Web-subnet"
              }
            ],
            "location": "westeurope",
            "name": "Web-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "Be-rg"
          },
          "dependencies": [
            "azurerm_resource_group.be-rg",
            "azurerm_subnet.be-rg",
            "azurerm_virtual_network.be-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jbox-rg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Jbox-rg/providers/Microsoft.Network/networkInterfaces/Jbox-nic",
            "internal_domain_name_suffix": "yukmmd3s5hsefpvag4gt0hzfqh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Fe-rg/providers/Microsoft.Network/virtualNetworks/Fe-vnet/subnets/Jbox-subnet"
              }
            ],
            "location": "westeurope",
            "name": "Jbox-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "Jbox-rg"
          },
          "dependencies": [
            "azurerm_resource_group.fe-rg",
            "azurerm_resource_group.jbox-rg",
            "azurerm_subnet.fe-rg-02",
            "azurerm_virtual_network.fe-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "be-rg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Be-rg/providers/Microsoft.Network/networkInterfaces/Web-nic|/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Be-rg/providers/Microsoft.Network/networkSecurityGroups/Web-nsg",
            "network_interface_id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Be-rg/providers/Microsoft.Network/networkInterfaces/Web-nic",
            "network_security_group_id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Be-rg/providers/Microsoft.Network/networkSecurityGroups/Web-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.be-rg",
            "azurerm_network_security_group.be-rg",
            "azurerm_resource_group.be-rg",
            "azurerm_subnet.be-rg",
            "azurerm_virtual_network.be-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "jbox-rg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Jbox-rg/providers/Microsoft.Network/networkInterfaces/Jbox-nic|/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Jbox-rg/providers/Microsoft.Network/networkSecurityGroups/Jbox-nsg",
            "network_interface_id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Jbox-rg/providers/Microsoft.Network/networkInterfaces/Jbox-nic",
            "network_security_group_id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Jbox-rg/providers/Microsoft.Network/networkSecurityGroups/Jbox-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.jbox-rg",
            "azurerm_network_security_group.jbox-rg",
            "azurerm_resource_group.fe-rg",
            "azurerm_resource_group.jbox-rg",
            "azurerm_subnet.fe-rg-02",
            "azurerm_virtual_network.fe-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "be-rg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Be-rg/providers/Microsoft.Network/networkSecurityGroups/Web-nsg",
            "location": "westeurope",
            "name": "Web-nsg",
            "resource_group_name": "Be-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.be-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "jbox-rg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Jbox-rg/providers/Microsoft.Network/networkSecurityGroups/Jbox-nsg",
            "location": "westeurope",
            "name": "Jbox-nsg",
            "resource_group_name": "Jbox-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.jbox-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "be-rg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.2.4/32",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Be-rg/providers/Microsoft.Network/networkSecurityGroups/Web-nsg/securityRules/web",
            "name": "web",
            "network_security_group_name": "Web-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Be-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_interface.be-rg",
            "azurerm_network_security_group.be-rg",
            "azurerm_resource_group.be-rg",
            "azurerm_subnet.be-rg",
            "azurerm_virtual_network.be-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "fe-rg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.2.4/32",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Be-rg/providers/Microsoft.Network/networkSecurityGroups/Web-nsg/securityRules/rdp",
            "name": "rdp",
            "network_security_group_name": "Web-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "Be-rg",
            "source_address_prefix": "10.0.1.4/32",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_interface.be-rg",
            "azurerm_network_interface.jbox-rg",
            "azurerm_network_security_group.be-rg",
            "azurerm_resource_group.be-rg",
            "azurerm_resource_group.fe-rg",
            "azurerm_resource_group.jbox-rg",
            "azurerm_subnet.be-rg",
            "azurerm_subnet.fe-rg-02",
            "azurerm_virtual_network.be-rg",
            "azurerm_virtual_network.fe-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "jbox-rg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.1.4/32",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Jbox-rg/providers/Microsoft.Network/networkSecurityGroups/Jbox-nsg/securityRules/rdp",
            "name": "rdp",
            "network_security_group_name": "Jbox-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Jbox-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_interface.jbox-rg",
            "azurerm_network_security_group.jbox-rg",
            "azurerm_resource_group.fe-rg",
            "azurerm_resource_group.jbox-rg",
            "azurerm_subnet.fe-rg-02",
            "azurerm_virtual_network.fe-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "fe-rg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Fe-rg/providers/Microsoft.Network/publicIPAddresses/Pub-ip01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.73.104.143",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "Pub-ip01",
            "resource_group_name": "Fe-rg",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.fe-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "be-rg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Be-rg/providers/Microsoft.Network/virtualNetworks/Web-vnet/subnets/Web-subnet",
            "name": "Web-subnet",
            "resource_group_name": "Be-rg",
            "virtual_network_name": "Web-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.be-rg",
            "azurerm_virtual_network.be-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "fe-rg-01",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Fe-rg/providers/Microsoft.Network/virtualNetworks/Fe-vnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "Fe-rg",
            "virtual_network_name": "Fe-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.fe-rg",
            "azurerm_virtual_network.fe-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "fe-rg-02",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Fe-rg/providers/Microsoft.Network/virtualNetworks/Fe-vnet/subnets/Jbox-subnet",
            "name": "Jbox-subnet",
            "resource_group_name": "Fe-rg",
            "virtual_network_name": "Fe-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.fe-rg",
            "azurerm_virtual_network.fe-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "be-rg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.2.0/23"
            ],
            "guid": "e2532092-86e9-42b7-8be0-fd64c7925778",
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Be-rg/providers/Microsoft.Network/virtualNetworks/Web-vnet",
            "location": "westeurope",
            "name": "Web-vnet",
            "resource_group_name": "Be-rg"
          },
          "dependencies": [
            "azurerm_resource_group.be-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "fe-rg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/23"
            ],
            "guid": "0fc614c5-f9b2-42e4-bea0-378d3d1f2587",
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Fe-rg/providers/Microsoft.Network/virtualNetworks/Fe-vnet",
            "location": "westeurope",
            "name": "Fe-vnet",
            "resource_group_name": "Fe-rg"
          },
          "dependencies": [
            "azurerm_resource_group.fe-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "be-fe",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Be-rg/providers/Microsoft.Network/virtualNetworks/Web-vnet/virtualNetworkPeerings/be-fe",
            "name": "be-fe",
            "remote_virtual_network_id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Fe-rg/providers/Microsoft.Network/virtualNetworks/Fe-vnet",
            "resource_group_name": "Be-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "Web-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.be-rg",
            "azurerm_resource_group.fe-rg",
            "azurerm_virtual_network.be-rg",
            "azurerm_virtual_network.fe-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "fe-be",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Fe-rg/providers/Microsoft.Network/virtualNetworks/Fe-vnet/virtualNetworkPeerings/fe-be",
            "name": "fe-be",
            "remote_virtual_network_id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/Be-rg/providers/Microsoft.Network/virtualNetworks/Web-vnet",
            "resource_group_name": "Fe-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "Fe-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.be-rg",
            "azurerm_resource_group.fe-rg",
            "azurerm_virtual_network.be-rg",
            "azurerm_virtual_network.fe-rg"
          ]
        }
      ]
    }
  ]
}